--- a/Style.css
+++ b/Style.css
@@ -123,3 +123,59 @@
     color: orange;
     font-size: 40px;
 }
+
+/* requires the "Content" inorder to work */
+.box8::before {
+    content: "LOREM:";
+    color: red;
+}
+
+/* requires the "Content" inorder to work */
+.box8::after {
+    content: "After lOREM";
+    color: blue;
+}
+
+.box9 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.box10 {
+    margin-top: 20px;
+    padding: 30px;
+    height: 500px;
+    border: 3px solid blue;
+    position: relative;
+}
+
+.box11, 
+.box12 {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.box12 {
+    background-color: chartreuse;
+    width: 500px;
+    height: 25px;
+    z-index: -20;
+}
+
+.box10::before {
+    background-image: url(./NOv_11/Trees.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    opacity: .40;
+}
+
