--- a/Nov 22/Lecture-RWD.css
+++ b/Nov 22/Lecture-RWD.css
@@ -75,7 +75,8 @@
     body {
         background-color: darkslateblue;
 @@ -18,6 +79,6 @@
-
+    }
+}
 @media screen and (min-width: 1201px) {
     body {
         background-color: deeppink;
