--- a/Group4_Project_1/AboutUs_Project/Project Main/styles.css
+++ b/Group4_Project_1/AboutUs_Project/Project Main/styles.css
@@ -300,7 +300,7 @@ h1 {
 footer {
     width: 100%;
     height: 100px;
-    background-color: aqua;
+    background-color: rgb(0, 234, 255);
 
 }
 
@@ -309,18 +309,6 @@ footer {
     background: linear-gradient(180deg, rgba(19, 18, 18, 0.37048322747067575) 95%, rgba(241, 233, 233, 0.7346288857339811) 100%, rgba(241, 233, 233, 0.47692580450148814) 100%);
 }
 
-/* 
-@media screen and (max-width:2160px) {
-    .p p {
-        display: none;
-
-    }
-
-    footer {
-        display: none;
-    }
-
-} */
 
 
 
@@ -560,20 +548,7 @@ DRAFTS/style.css at main · Kodego4/DRAFTS */
     color: #fff;
   }
 
-  /* @media screen and (max-width: 575px) {
-    .our-team .container {
-      display: inline-block;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
-  }
-  
-  @media only screen and (max-width: 990px) {
-    .our-team {
-      margin-bottom: 30px;
-    }
-  } */
-  
+   
 
 
 
@@ -590,7 +565,7 @@ DRAFTS/style.css at main · Kodego4/DRAFTS */
 }
 
 form{
-    background-color: aqua;
+    background-image: url(https://burst.shopifycdn.com/photos/contact-us-image.jpg?width=1200&format=pjpg&exif=1&iptc=1);
     display: flex;
     flex-direction: column;
     padding: 2vw 4vw;
@@ -601,7 +576,7 @@ form{
 }
 
 form h3{
-    color: blue;
+    color: rgb(5, 5, 34);
     font-weight: 800;
     margin-bottom: 20px;
 
@@ -612,10 +587,86 @@ form input, form textarea{
     margin: 10px 0;
     padding: 20px;
     outline: none;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     font-size: 16px;
 }
 
 /* ------------------------------------------------------------------ */
-/*-----------------------------Log In-----------------------------*/
+/*---------------------------------Log In-----------------------------*/
 /* ------------------------------------------------------------------ */
+.container_login {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-top: 10px;
+}
+
+.label{
+    display: flex;
+    flex-direction: column;
+    font-size: 35px;
+    font-weight: bold;
+    color: black;
+    margin-top: 20px;
+}
+
+.login_form{
+    display: flex;
+    align-self: center;
+    /* padding: 20px; */
+    font-size: 18px;
+    color: black;
+    margin: 5px 0;
+    background-image:none;
+    background-color: #9aefee;
+
+/*     background-repeat: no-repeat;
+    background-size:cover; */
+}
+
+.login_form input{
+    height: 40px;
+    width: 350px;
+    padding: 0 5px;
+    font-size: 18px;
+    outline: none;
+    border: 1px solid navy;
+
+}
+.login_form .font2{
+    margin-top: 30px;
+
+}
+
+.login_form button{
+    margin: 45px 0 30px 0;
+    height: 45px;
+    width: 365px;
+    font-size: 20px;
+    color: olive;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+    background: rgb(8, 26, 74);
+    border-radius: 3px;
+    border: 1px solid blue;
+    transition: .10s;
+}
+
+.login_form button:hover{
+    background: #151c6a;
+}
+
+.login_form #email_error,
+.login_form #pass_error{
+    margin-top: 5px;
+    width: 345px;
+    font-size: 18px;
+    color: #c62828;
+    background: rgba(255,0,0,0.1);
+    text-align: center;
+    padding: 5px 8px;
+    border-radius: 3px;
+    border: 1px solid #EF9A9A;
+    display: none;
+}
